tests/ui/attributes/attr-on-mac-call.stderr
error: `#[export_name]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:8:5
   |
LL |     #[export_name = "x"]
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[export_name]` can be applied to functions and statics
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[naked]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:11:5
   |
LL |     #[unsafe(naked)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[naked]` can only be applied to functions
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[track_caller]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:14:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^
   |
   = help: `#[track_caller]` can only be applied to functions
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[used]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:17:5
   |
LL |     #[used]
   |     ^^^^^^^
   |
   = help: `#[used]` can only be applied to statics
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[target_feature]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:20:5
   |
LL |     #[target_feature(enable = "x")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[target_feature]` can only be applied to functions
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[deprecated]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:23:5
   |
LL |     #[deprecated]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[deprecated]` can be applied to associated consts, associated types, constants, crates, data types, enum variants, foreign statics, functions, inherent impl blocks, macro defs, modules, statics, struct fields, traits, type aliases, and use statements
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[inline]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:26:5
   |
LL |     #[inline]
   |     ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[link_name]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:29:5
   |
LL |     #[link_name = "x"]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[link_name]` can be applied to foreign functions and foreign statics
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[link_section]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:32:5
   |
LL |     #[link_section = "__TEXT,__text"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[link_section]` can be applied to functions and statics
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[link_ordinal]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:35:5
   |
LL |     #[link_ordinal(42)]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[link_ordinal]` can be applied to foreign functions and foreign statics
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[non_exhaustive]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:38:5
   |
LL |     #[non_exhaustive]
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: `#[non_exhaustive]` can be applied to data types and enum variants
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[proc_macro]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:41:5
   |
LL |     #[proc_macro]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[proc_macro]` can only be applied to functions
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[cold]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:44:5
   |
LL |     #[cold]
   |     ^^^^^^^
   |
   = help: `#[cold]` can only be applied to functions
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[no_mangle]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:47:5
   |
LL |     #[no_mangle]
   |     ^^^^^^^^^^^^
   |
   = help: `#[no_mangle]` can be applied to functions and statics
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[deprecated]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:50:5
   |
LL |     #[deprecated]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[deprecated]` can be applied to associated consts, associated types, constants, crates, data types, enum variants, foreign statics, functions, inherent impl blocks, macro defs, modules, statics, struct fields, traits, type aliases, and use statements
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[automatically_derived]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:53:5
   |
LL |     #[automatically_derived]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[automatically_derived]` can only be applied to trait impl blocks
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[macro_use]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:56:5
   |
LL |     #[macro_use]
   |     ^^^^^^^^^^^^
   |
   = help: `#[macro_use]` can be applied to extern crates and modules
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[must_use]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:59:5
   |
LL |     #[must_use]
   |     ^^^^^^^^^^^
   |
   = help: `#[must_use]` can be applied to data types, functions, and traits
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[no_implicit_prelude]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:62:5
   |
LL |     #[no_implicit_prelude]
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[no_implicit_prelude]` can be applied to crates and modules
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[path]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:65:5
   |
LL |     #[path = ""]
   |     ^^^^^^^^^^^^
   |
   = help: `#[path]` can only be applied to modules
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[ignore]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:68:5
   |
LL |     #[ignore]
   |     ^^^^^^^^^
   |
   = help: `#[ignore]` can only be applied to functions
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[should_panic]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:71:5
   |
LL |     #[should_panic]
   |     ^^^^^^^^^^^^^^^
   |
   = help: `#[should_panic]` can only be applied to functions
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[link_name]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:74:5
   |
LL |     #[link_name = "x"]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[link_name]` can be applied to foreign functions and foreign statics
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[sanitize]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:77:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[repr()]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:81:5
   |
LL |     #[repr()]
   |     ^^^^^^^^^
   |
   = help: `#[repr()]` can only be applied to data types
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[repr(u8)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:86:5
   |
LL |     #[repr(u8)]
   |     ^^^^^^^^^^^
   |
   = help: `#[repr(u8)]` can only be applied to enums
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[repr(align(...))]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:90:5
   |
LL |     #[repr(align(8))]
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: `#[repr(align(...))]` can only be applied to data types
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[repr(packed)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:94:5
   |
LL |     #[repr(packed)]
   |     ^^^^^^^^^^^^^^^
   |
   = help: `#[repr(packed)]` can only be applied to data types
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[repr(C)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:98:5
   |
LL |     #[repr(C)]
   |     ^^^^^^^^^^
   |
   = help: `#[repr(C)]` can only be applied to data types
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[repr(Rust)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:102:5
   |
LL |     #[repr(Rust)]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[repr(Rust)]` can only be applied to data types
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[repr(simd)]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:106:5
   |
LL |     #[repr(simd)]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[repr(simd)]` can only be applied to structs
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: `#[register_tool]` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:110:5
   |
LL |     #[register_tool(xyz)]
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[register_tool]` can only be applied to crates
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: unused attribute
  --> $DIR/attr-on-mac-call.rs:81:5
   |
LL |     #[repr()]
   |     ^^^^^^^^^ help: remove this attribute
   |
   = note: using `repr` with an empty list has no effect
note: the lint level is defined here
  --> $DIR/attr-on-mac-call.rs:3:9
   |
LL | #![warn(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to 32 previous errors; 1 warning emitted

